fixed the alignment issues

--- a/assets/styles/forgot_password.css
+++ b/assets/styles/forgot_password.css
@@ -39,7 +39,7 @@ input{
     outline: none;    
 }
 .input-style{
-  width: 360px;
+  width: 100%;
   text-align:center;
   padding:15px;
   background-color:white;
@@ -61,6 +61,7 @@ color:#2f3640;
 
 ::placeholder{
 color:#95a5a6;
+text-align: left;
 }
 
 #container-1{
@@ -88,9 +89,9 @@ color:#95a5a6;
     ;*/rgba(192,22,22,0.9);
     font-weight:600;
     font-size: 12px;
-    width:360px;
+    width:90%;
     height: 45px;
-    margin-right: 20px;
+    
 }
 
 .button1:hover{
